2008-09-10  Jonathon Jongsma  <jjongsma@gnome.org>

	* cairomm/context.cc:
	* cairomm/context.h:
	* tests/test-context.cc: add Context::get_font_options() and tests for it.

2008-09-10  Jonathon Jongsma  <jjongsma@gnome.org>

	* cairomm/Makefile.am:
	* cairomm/quartz_font.cc: Added.
	* cairomm/quartz_font.h: Added.
	* docs/reference/Doxyfile.in:
	Added QuartzFontFace class

2008-09-10  Jonathon Jongsma  <jjongsma@gnome.org>

	* cairomm/win32_font.h: fix header protection guards

2008-09-10  Jonathon Jongsma  <jjongsma@gnome.org>

	* tests/test-font-face.cc: add a test to use the Win32FontFace API written by
	Armin Burgmeier

2008-09-10  Armin Burgmeier  <armin@arbur.net>

	* cairomm/win32_font.h:
	* cairomm/win32_font.cc: Fixed the build on Windows.

	* cairomm/context.cc: Use &vec[0] instead of vec.data(), since
	the latter seems not to be available everywhere.

	* cairomm/fontface.cc: Added #ifdef CAIRO_HAS_FT_FONT around the code
	using FtFontFace, to fix the build with disabled FreeType.

2008-09-10  Jonathon Jongsma  <jjongsma@gnome.org>

	* cairomm/Makefile.am:
	* cairomm/win32_font.cc: Added.
	* cairomm/win32_font.h: Added.
	* docs/reference/Doxyfile.in: add support for win32 fonts.  Note that I don't
	have a win32 platform to test with, so I haven't actually compiled this to
	verify that it works correctly

2008-09-10  Jonathon Jongsma  <jjongsma@gnome.org>

	* cairomm/cairomm.h: update, add missing includes

2008-09-09  Jonathon Jongsma  <jjongsma@gnome.org>

	* cairomm/fontface.cc:
	* cairomm/fontface.h:
	* cairomm/fontoptions.cc:
	* cairomm/fontoptions.h:
	* cairomm/scaledfont.cc:
	* cairomm/scaledfont.h:
	* docs/reference/Doxyfile.in:
	* tests/test-font-face.cc: add freetype font support

2008-09-09  Jonathon Jongsma  <jjongsma@gnome.org>

	* cairomm/fontface.cc: use vector::empty() rather than ::size()

2008-09-03  Jonathon Jongsma  <jjongsma@gnome.org>

	* cairomm/fontface.cc:
	* cairomm/fontface.h: Add the text_to_glyphs function API to UserFontFace